@@ -76,6 +76,15 @@ POSSIBILITY OF SUCH DAMAGE.
 #include <linux/fiemap.h>
 #endif
 
+#include <linux/falloc.h>
+#include <asm/unistd_64.h> // For __NR_fallocate
+
+// circumvent the lack of support in glibc
+static int fallocate(int fd, int mode, loff_t offset, loff_t len)
+{
+	return syscall(__NR_fallocate, fd, mode, offset, len);
+}
+
 #elif defined __APPLE__ && defined __MACH__
 // mac specifics
 
@@ -1437,6 +1446,13 @@ namespace libtorrent
 			if (fcntl(m_fd, F_PREALLOCATE, &f) < 0)
 			{
 				ec.assign(errno, get_posix_category());
+				return false;
+			}
+#elif defined TORRENT_LINUX
+			int ret = fallocate(m_fd, FALLOC_FL_KEEP_SIZE, 0, s);
+			if (ret != 0 && ret != EOPNOTSUPP && errno != ENOSYS)
+			{
+				ec.assign(ret, get_posix_category());
 				return false;
 			}
 #elif TORRENT_HAS_FALLOCATE
